Closed
Bug 613943
Opened 15 years ago
Closed 15 years ago
[@ nsWindow::DoPaint] crashes when trying to access MWindow::orientationAngle
Categories
(Core Graveyard :: Widget: Qt, defect)
Tracking
(Not tracked)
RESOLVED
FIXED
People
(Reporter: tatiana, Assigned: tatiana)
References
Details
(Keywords: crash)
Crash Data
Attachments
(2 files, 1 obsolete file)
|
5.45 KB,
text/plain
|
Details | |
|
1.36 KB,
patch
|
romaxa
:
review+
|
Details | Diff | Splinter Review |
crash is reproduced with embedding test (pure Qt app)
| Assignee | ||
Updated•15 years ago
|
| Assignee | ||
Updated•15 years ago
|
Attachment #492306 -
Attachment mime type: application/octet-stream → text/plain
| Assignee | ||
Comment 1•15 years ago
|
||
MApplication::activeWindow() static method works correctly now, no crashes for pure Qt apps anymore
so, it's ok to rely on it.
Comment 2•15 years ago
|
||
Comment on attachment 492308 [details] [diff] [review]
patch
Hmm... previously it was so that if Meego touch not initialized and you call any meegotouch functionality it will abort inside meegotouch.
This seems from another bug.
- NS_ASSERTION(PIXMAN_VERSION < PIXMAN_VERSION_ENCODE(0, 21, 2) && angle, "Old pixman and rotate transform, it is going to be slow");
+ NS_ASSERTION(PIXMAN_VERSION > PIXMAN_VERSION_ENCODE(0, 21, 2) || !angle, "Old pixman and rotate transform, it is going to be slow");
613853
could you make patch on top of patch from bug 613853?
| Assignee | ||
Comment 3•15 years ago
|
||
I don't know where do they move MComponentData initialization, but activeWindow() doesn't crash with "-style motif" even
Attachment #492308 -
Attachment is obsolete: true
Attachment #492313 -
Flags: review?(romaxa)
Attachment #492308 -
Flags: review?(romaxa)
| Assignee | ||
Updated•15 years ago
|
OS: Linux → MeeGo
Comment 4•15 years ago
|
||
Comment on attachment 492313 [details] [diff] [review]
patch v2
yeah, we can call MApplication::activeWindow(); and don't crash now
Attachment #492313 -
Flags: review?(romaxa) → review+
Comment 6•15 years ago
|
||
okay
Comment 7•15 years ago
|
||
Status: ASSIGNED → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
Updated•15 years ago
|
Crash Signature: [@ nsWindow::DoPaint]
Updated•10 years ago
|
Product: Core → Core Graveyard
You need to log in
before you can comment on or make changes to this bug.
Description
•