Bug 613943 - [@ nsWindow::DoPaint] crashes when trying to access MWindow::orientationAngle r=romaxa a=npodb